@@ -47,7 +47,9 @@ public:
 
 	static void SetWebBrowser(string browser){	m_WebBrowser = browser;	}
 	static void SetMailClient(string mailclient){	m_MailClient = mailclient;	}
+#ifdef USE_WGET
 	static void setWgetFiles(const bool bBool){ m_bWgetFiles = bBool; }
+#endif
 
 protected:
     bool OnKeyDown(GdkEventKey* evt);
@@ -68,7 +70,9 @@ protected:
 #endif /* !defined(MOZ_PLUGIN) */
     static string m_WebBrowser;
     static string m_MailClient;
+#ifdef USE_WGET
 	static bool m_bWgetFiles;
+#endif
 };
 
 #endif
